[package]
name = "SecContextV1"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "signal"] }
wayrs-client = { version = "1.3.1", features = ["tokio"] }
wayrs-protocols = { version = "0.14.11", features = ["security-context-v1"] }
